fix(StreetName): long names overflowing in street gallery

--- a/client/src/streets/StreetName.css
+++ b/client/src/streets/StreetName.css
@@ -12,6 +12,7 @@
 
 .street-name-text {
   display: inline-block;
+  width: 100%;
   font-family: "Overpass Variable", sans-serif;
   font-weight: 700;
   text-align: left;
